<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_marginHorizontal="20dp"
    android:gravity="center_vertical"
    tools:context=".ui.MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:textSize="26sp"
        android:textStyle="bold"
        android:textColor="@android:color/black"
        android:layout_marginBottom="10dp"/>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/input_email"
        app:boxStrokeColor="@color/gray_100"
        app:boxStrokeWidth="2dp"
        app:boxStrokeWidthFocused="3dp"
        android:layout_marginBottom="10dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/inputLoginEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            android:padding="12dp"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/input_password"
        app:boxStrokeColor="@color/gray_100"
        app:boxStrokeWidth="2dp"
        app:boxStrokeWidthFocused="3dp"
        android:layout_marginBottom="10dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/inputLoginPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            android:padding="12dp"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_login"
        android:textColor="@color/gray_100"
        android:textSize="16sp"
        style="?attr/materialButtonOutlinedStyle"
        app:strokeColor="@color/gray_100"
        app:strokeWidth="2dp"
        app:cornerRadius="8dp"
        android:layout_marginTop="10dp"
        android:backgroundTint="@color/background"/>

</LinearLayout>
