<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.CreateUserActivity"
    android:gravity="center"
    android:layout_marginHorizontal="20dp"
    >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_update_user"
        android:textSize="26sp"
        android:textStyle="bold"
        android:textColor="@android:color/black"
        android:layout_marginBottom="10dp"/>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/input_name"
        app:boxStrokeColor="@color/gray_100"
        app:boxStrokeWidth="2dp"
        app:boxStrokeWidthFocused="3dp"
        android:layout_marginBottom="20dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/input_create_user_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:textColor="@android:color/black"
            android:textSize="16sp"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/input_email"
        app:boxStrokeColor="@color/gray_100"
        app:boxStrokeWidth="2dp"
        app:boxStrokeWidthFocused="3dp"
        android:layout_marginBottom="20dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/input_create_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:textColor="@android:color/black"
            android:textSize="16sp"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/input_tel"
        app:boxStrokeColor="@color/gray_100"
        app:boxStrokeWidth="2dp"
        app:boxStrokeWidthFocused="3dp"
        android:layout_marginBottom="20dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/input_create_tel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="phone"
            android:textColor="@android:color/black"
            android:textSize="16sp"/>
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_create_user"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_update_user"
        android:textColor="@color/gray_100"
        android:textSize="16sp"
        style="?attr/materialButtonOutlinedStyle"
        app:strokeColor="@color/gray_100"
        app:strokeWidth="2dp"
        app:cornerRadius="8dp" />



</LinearLayout>